# computer-vision-design-patterns

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  magic.py  makefile  pyproject.toml  ruff.toml
.github/workflows/: create_release.yml  release.yml
computer_vision_design_patterns/pipeline/: __init__.py  payload.py  pipeline.py  stage.py  stage1to1.py  stage1toN.py  stageNtoN.py
computer_vision_design_patterns/pipeline/sample_stage/: RGB2GRAYStage.py  RGB2GRAYStage1to1.py  SimpleStreamStage.py  SwitchStage.py  VideoSink.py  __init__.py
dev/: dev_event.py  dev_pipeline.py
dev/pipeline/: dev_payload.py  dev_pipeline.py
src/computer_vision_design_patterns/: fuzzy.py
src/computer_vision_design_patterns/pipeline/: __init__.py  payload.py  pipeline.py  stage.py
src/computer_vision_design_patterns/pipeline/sample_stage/: DummyStage.py  RGB2GRAYStage.py  SimpleStreamStage.py  SwitchStage.py  VideoSink.py  __init__.py
tests/: counter_test.py  dev_counter.py  dev_event.py  dev_fuzzyboolean.py  dev_pipeline.py  event_test.py  pipeline_dev.py  test_counter.py  test_event.py  test_fuzzy.py  test_payload.py  test_pipeline.py  test_stage.py
tests/pipeline/: test_pipeline.py  test_stage.py
